# trmnl-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: HOME_ASSISTANT.md
examples/: basic.rs  basic_byos.rs  custom_data.rs  with_render.rs
src/: auth.rs  axum_ext.rs  byos.rs  client.rs  error.rs  lib.rs  render.rs  schedule.rs
templates/: dashboard.html
