[package]
name = "trmnl"
version = "0.1.0"
edition = "2021"
authors = ["Taj Sangha <taj@tajwarsangha.com>"]
description = "Rust SDK for TRMNL e-ink displays"
license = "MIT"
repository = "https://github.com/tsangha/trmnl-rs"
documentation = "https://docs.rs/trmnl"
keywords = ["trmnl", "e-ink", "display", "dashboard", "iot"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

[features]
default = []
# Enable tracing instrumentation
tracing = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom_data"
path = "examples/custom_data.rs"
